# opendataswe.github.io

./: .gitignore  Cargo.toml  README.md  Readme.md  index.html  skatt-fe-79a93f635eb6588c.js  skatt-fe-79a93f635eb6588c_bg.wasm
.cmd/: build-fe.sh  serve.sh
.github/: publish-pages.sh
.github/workflows/: main.yml
offline-runner/: Cargo.toml
offline-runner/src/: generate_help_from_markdown.rs  generate_municipalities.rs  main.rs
skatt-fe/: Cargo.toml  index.html
skatt-fe/src/: app.rs  check.rs  error.rs  info.rs  input.rs  main.rs  plot.rs  range_picker.rs  select.rs  slider.rs
skatt-fe/src/info/: text.rs
skatt-fe/src/plot/: line_absolute.rs  line_absolute_incline.rs  line_draw.rs  line_percentage.rs  line_percentage_incline.rs  picker.rs  pie.rs  pie_draw.rs  table.rs
skatt-fe/src/select/: church.rs  municipality.rs
skatt-lib/: Cargo.toml
skatt-lib/src/: api.rs  calculate.rs  generated.rs  lib.rs  number.rs  rules.rs
skatt-lib/src/api/: base_deduction.rs  tax_by_municipality.rs
skatt-lib/src/rules/: employer.rs  income_tax_reduction.rs  pbb.rs  public_service_fee.rs  state_tax.rs  work_tax_deduction.rs
