[package]
name = "skatt-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
skatt-lib = { workspace = true }

plotters = { workspace = true }
plotters-canvas = { workspace = true }
rustc-hash = { workspace = true }
yew = { workspace = true }
web-sys = { workspace = true, features = ["DomRect"] }

[lints]
workspace = true
