[package]
name = "skatt-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true